language/move-lang/tests/move_check/locals/use_before_assign_if_else.move
module M {
    fun tmove(cond: bool) {
        let x: u64;
        if (cond) { } else { x = 0 };
        let _ = move x + 1;
    }

    fun tcopy(cond: bool) {
        let x: u64;
        if (cond) { } else { x = 0 };
        let _ = move x + 1;
    }

    fun tborrow(cond: bool) {
        let x: u64;
        if (cond) { } else { x = 0 };
        let _ = move x + 1;
    }

}
